# esp-minreq

./: Cargo.toml  README.md  sdkconfig.defaults
.github/workflows/: rust_ci.yml
src/: buf_reader.rs  bytes_iter.rs  lib.rs  tcp.rs
src/http/: connection.rs  error.rs  http_url.rs  mod.rs  proxy.rs  request.rs  response.rs
